# temp_software_project

./: .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp  verify.cpp
.github/workflows/: build.yml  easybuild.yml
easybuild/: software-project.eb
